--- a/templates/index.html
+++ b/templates/index.html
@@ -2,18 +2,22 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django Dars</title>
     <style>
-        table, th, td {
-          border:1px solid black;
-          padding: 5px;
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            padding: 5px;
         }
     </style>
 </head>
-<body>  
+
+<body>
     <h1>Jurnal</h1>
     <a href="/create/">Jurnal Yaratish</a>
     <table>
@@ -25,14 +29,15 @@
             <th>Created at</th>
         </tr>
         {% for i in objects %}
-            <tr>
-                <td><a href="/detail/{{ i.id }}">{{ i.id }}</a></td>
-                <td>{{ i.student }}</td>
-                <td>{{ i.baho }}</td>
-                <td>{{ i.updated_at }}</td>
-                <td>{{ i.created_at }}</td>
-            </tr>
+        <tr>
+            <td><a href="/detail/{{ i.id }}">{{ i.id }}</a></td>
+            <td>{{ i.student }}</td>
+            <td>{{ i.baho }}</td>
+            <td>{{ i.updated_at }}</td>
+            <td>{{ i.created_at }}</td>
+        </tr>
         {% endfor %}
     </table>
 </body>
+
 </html>
